crates/snow-parser/tests/snapshots/parser_tests__field_access_single.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a.b\")"
---
SOURCE_FILE@0..3
  FIELD_ACCESS@0..3
    NAME_REF@0..1
      IDENT@0..1 "a"
    DOT@1..2 "."
    IDENT@2..3 "b"
  EOF@3..3 ""
