crates/snow-parser/tests/snapshots/parser_tests__fn_def_no_params.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn hello() do\\n  \\\"world\\\"\\nend\")"
---
SOURCE_FILE@0..23
  FN_DEF@0..23
    FN_KW@0..2 "fn"
    NAME@2..7
      IDENT@2..7 "hello"
    PARAM_LIST@7..9
      L_PAREN@7..8 "("
      R_PAREN@8..9 ")"
    DO_KW@9..11 "do"
    BLOCK@11..20
      NEWLINE@11..12 "\n"
      STRING_EXPR@12..19
        STRING_START@12..13 "\""
        STRING_CONTENT@13..18 "world"
        STRING_END@18..19 "\""
      NEWLINE@19..20 "\n"
    END_KW@20..23 "end"
  EOF@23..23 ""
