crates/snow-parser/tests/snapshots/parser_tests__fn_def_pub.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"pub fn add(x, y) do\\n  x + y\\nend\")"
---
SOURCE_FILE@0..23
  FN_DEF@0..23
    VISIBILITY@0..3
      PUB_KW@0..3 "pub"
    FN_KW@3..5 "fn"
    NAME@5..8
      IDENT@5..8 "add"
    PARAM_LIST@8..13
      L_PAREN@8..9 "("
      PARAM@9..10
        IDENT@9..10 "x"
      COMMA@10..11 ","
      PARAM@11..12
        IDENT@11..12 "y"
      R_PAREN@12..13 ")"
    DO_KW@13..15 "do"
    BLOCK@15..20
      NEWLINE@15..16 "\n"
      BINARY_EXPR@16..19
        NAME_REF@16..17
          IDENT@16..17 "x"
        PLUS@17..18 "+"
        NAME_REF@18..19
          IDENT@18..19 "y"
      NEWLINE@19..20 "\n"
    END_KW@20..23 "end"
  EOF@23..23 ""
