crates/snow-parser/tests/snapshots/parser_tests__fn_def_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn greet(name) do\\n  \\\"hello\\\"\\nend\")"
---
SOURCE_FILE@0..27
  FN_DEF@0..27
    FN_KW@0..2 "fn"
    NAME@2..7
      IDENT@2..7 "greet"
    PARAM_LIST@7..13
      L_PAREN@7..8 "("
      PARAM@8..12
        IDENT@8..12 "name"
      R_PAREN@12..13 ")"
    DO_KW@13..15 "do"
    BLOCK@15..24
      NEWLINE@15..16 "\n"
      STRING_EXPR@16..23
        STRING_START@16..17 "\""
        STRING_CONTENT@17..22 "hello"
        STRING_END@22..23 "\""
      NEWLINE@23..24 "\n"
    END_KW@24..27 "end"
  EOF@27..27 ""
