crates/snow-parser/tests/snapshots/parser_tests__fn_def_typed_params_and_return.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn typed(x :: Int, y :: Int) -> Int do\\n  x + y\\nend\")"
---
SOURCE_FILE@0..37
  FN_DEF@0..37
    FN_KW@0..2 "fn"
    NAME@2..7
      IDENT@2..7 "typed"
    PARAM_LIST@7..22
      L_PAREN@7..8 "("
      PARAM@8..14
        IDENT@8..9 "x"
        TYPE_ANNOTATION@9..14
          COLON_COLON@9..11 "::"
          IDENT@11..14 "Int"
      COMMA@14..15 ","
      PARAM@15..21
        IDENT@15..16 "y"
        TYPE_ANNOTATION@16..21
          COLON_COLON@16..18 "::"
          IDENT@18..21 "Int"
      R_PAREN@21..22 ")"
    TYPE_ANNOTATION@22..27
      ARROW@22..24 "->"
      IDENT@24..27 "Int"
    DO_KW@27..29 "do"
    BLOCK@29..34
      NEWLINE@29..30 "\n"
      BINARY_EXPR@30..33
        NAME_REF@30..31
          IDENT@30..31 "x"
        PLUS@31..32 "+"
        NAME_REF@32..33
          IDENT@32..33 "y"
      NEWLINE@33..34 "\n"
    END_KW@34..37 "end"
  EOF@37..37 ""
