crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_bool_pattern.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..16
  FN_DEF@0..16
    FN_KW@0..2 "fn"
    NAME@2..8
      IDENT@2..8 "to_int"
    PARAM_LIST@8..14
      L_PAREN@8..9 "("
      PARAM@9..13
        LITERAL_PAT@9..13
          TRUE_KW@9..13 "true"
      R_PAREN@13..14 ")"
    EQ@14..15 "="
    FN_EXPR_BODY@15..16
      LITERAL@15..16
        INT_LITERAL@15..16 "1"
  EOF@16..16 ""
