crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_constructor_pattern.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..16
  FN_DEF@0..16
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "foo"
    PARAM_LIST@5..14
      L_PAREN@5..6 "("
      PARAM@6..13
        CONSTRUCTOR_PAT@6..13
          IDENT@6..10 "Some"
          L_PAREN@10..11 "("
          IDENT_PAT@11..12
            IDENT@11..12 "x"
          R_PAREN@12..13 ")"
      R_PAREN@13..14 ")"
    EQ@14..15 "="
    FN_EXPR_BODY@15..16
      NAME_REF@15..16
        IDENT@15..16 "x"
  EOF@16..16 ""
