crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_ident_param.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..26
  FN_DEF@0..26
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "fib"
    PARAM_LIST@5..8
      L_PAREN@5..6 "("
      PARAM@6..7
        IDENT@6..7 "n"
      R_PAREN@7..8 ")"
    EQ@8..9 "="
    FN_EXPR_BODY@9..26
      BINARY_EXPR@9..26
        CALL_EXPR@9..17
          NAME_REF@9..12
            IDENT@9..12 "fib"
          ARG_LIST@12..17
            L_PAREN@12..13 "("
            BINARY_EXPR@13..16
              NAME_REF@13..14
                IDENT@13..14 "n"
              MINUS@14..15 "-"
              LITERAL@15..16
                INT_LITERAL@15..16 "1"
            R_PAREN@16..17 ")"
        PLUS@17..18 "+"
        CALL_EXPR@18..26
          NAME_REF@18..21
            IDENT@18..21 "fib"
          ARG_LIST@21..26
            L_PAREN@21..22 "("
            BINARY_EXPR@22..25
              NAME_REF@22..23
                IDENT@22..23 "n"
              MINUS@23..24 "-"
              LITERAL@24..25
                INT_LITERAL@24..25 "2"
            R_PAREN@25..26 ")"
  EOF@26..26 ""
