crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_multiple_params.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..12
  FN_DEF@0..12
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "add"
    PARAM_LIST@5..10
      L_PAREN@5..6 "("
      PARAM@6..7
        LITERAL_PAT@6..7
          INT_LITERAL@6..7 "0"
      COMMA@7..8 ","
      PARAM@8..9
        IDENT@8..9 "y"
      R_PAREN@9..10 ")"
    EQ@10..11 "="
    FN_EXPR_BODY@11..12
      NAME_REF@11..12
        IDENT@11..12 "y"
  EOF@12..12 ""
