crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_negative_literal.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..11
  FN_DEF@0..11
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "neg"
    PARAM_LIST@5..9
      L_PAREN@5..6 "("
      PARAM@6..8
        LITERAL_PAT@6..8
          MINUS@6..7 "-"
          INT_LITERAL@7..8 "1"
      R_PAREN@8..9 ")"
    EQ@9..10 "="
    FN_EXPR_BODY@10..11
      LITERAL@10..11
        INT_LITERAL@10..11 "1"
  EOF@11..11 ""
