crates/snow-parser/tests/snapshots/parser_tests__fn_expr_body_wildcard.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..10
  FN_DEF@0..10
    FN_KW@0..2 "fn"
    NAME@2..5
      IDENT@2..5 "foo"
    PARAM_LIST@5..8
      L_PAREN@5..6 "("
      PARAM@6..7
        WILDCARD_PAT@6..7
          IDENT@6..7 "_"
      R_PAREN@7..8 ")"
    EQ@8..9 "="
    FN_EXPR_BODY@9..10
      LITERAL@9..10
        INT_LITERAL@9..10 "0"
  EOF@10..10 ""
